Getting an event log from request body added
