# model/job.go
@@ -15,24 +15,26 @@ var (
 	JobStatusRunning   = JobStatus("running")
 	JobStatusCompleted = JobStatus("completed")
 	JobStatusFailed    = JobStatus("failed")
+	JobStatusDuplicate = JobStatus("duplicate")
 )
 
 // Job represents a job to be executed.
 //
 // swagger:model
 type Job struct {
-	ID                  string     `json:"id,omitempty"`
-	Status              JobStatus  `json:"status,omitempty"`
-	Error               string     `json:"error,omitempty"`
-	Result              *JobResult `json:"result,omitempty"`
-	ReportCSV           *URL       `json:"report_csv,omitempty"`
-	CallbackEndpoint    string     `json:"callback_endpoint,omitempty"`
-	CallbackEndpointURL *URL       `json:"-,omitempty"`
-	EventLog            string     `json:"event_log,omitempty"`
-	EventLogURL         *URL       `json:"-,omitempty"`
-	EventLogMD5         string     `json:"event_log_md5,omitempty"`
-	CreatedAt           time.Time  `json:"created_at,omitempty"`
-	CompletedAt         *time.Time `json:"finished_at,omitempty"`
+	ID                      string     `json:"id,omitempty"`
+	Status                  JobStatus  `json:"status,omitempty"`
+	Error                   string     `json:"error,omitempty"`
+	Result                  *JobResult `json:"result,omitempty"`
+	ReportCSV               *URL       `json:"report_csv,omitempty"`
+	CallbackEndpoint        string     `json:"callback_endpoint,omitempty"`
+	CallbackEndpointURL     *URL       `json:"-"`
+	EventLog                string     `json:"event_log,omitempty"`
+	EventLogURL             *URL       `json:"-"`
+	EventLogMD5             string     `json:"event_log_md5,omitempty"`
+	EventLogFromRequestBody bool       `json:"-"`
+	CreatedAt               time.Time  `json:"created_at,omitempty"`
+	CompletedAt             *time.Time `json:"finished_at,omitempty"`
 
 	lock sync.Mutex
 	Dir  string `json:"-"`
@@ -63,10 +65,6 @@ func (j *Job) Validate() error {
 
 	if j.Status == "" {
 		return fmt.Errorf("job status is required")
-	}
-
-	if j.CallbackEndpointURL.String() == "" || j.CallbackEndpoint == "" {
-		return fmt.Errorf("job callback endpoint is required")
 	}
 
 	if j.EventLogURL.String() == "" || j.EventLog == "" {
